--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:watch": "npx nodemon --exec npm test",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
     "debug": "ndb node app",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
@@ -20,13 +21,16 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
-    "morgan": "^1.9.1"
+    "knex": "^0.16.3",
+    "morgan": "^1.9.1",
+    "pg": "^7.8.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.0.0",
     "ndb": "^1.0.43",
     "nodemon": "^1.18.10",
+    "postgrator-cli": "^3.1.0",
     "supertest": "^3.4.2"
   }
 }
